--- a/res/include/header.html
+++ b/res/include/header.html
@@ -1,1 +1,7 @@
-
+<ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#creations">Creations</a></li>
+    <li><a href="#games">Games</a></li>
+</ul>
