--- a/res/global/styles.css
+++ b/res/global/styles.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5{
     padding: 0;
     overflow: hidden;
     border: 1px solid #e7e7e7;
-    background-color: white;
+    background-color: #f3f3f3;
 }
 #header li {
     float: left;
