--- a/res/global/styles.css
+++ b/res/global/styles.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5{
     background-position: center; 
     height: 30%;
 }
-#jumbotron h1, h2, h3, h4, h5{
+#jumbotron h1{
     font-size: 3em;
     color: aliceblue;
     text-align: center;
