--- a/res/global/styles.css
+++ b/res/global/styles.css
@@ -75,6 +75,7 @@ h1, h2, h3, h4, h5{
     color: inherit;
     border: solid aliceblue 2px;
     padding: 5px;
+    border-radius: 3px;
     transition: background-color .5s, color .5s;
 }
 #jumbotron a:hover, a:focus{
