--- a/res/global/styles.css
+++ b/res/global/styles.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4, h5{
     padding: 0;
 }
 
-#header{
+#header .desktop{
     z-index: 100;
     position: fixed;
     top: 0;
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5{
     right: 0;
     height: 3em;
 }
-#header ul{
+#header .desktop ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -27,28 +27,100 @@ h1, h2, h3, h4, h5{
     border: 1px solid #e7e7e7;
     background-color: #f3f3f3;
 }
-#header li {
+#header .desktop li {
     float: left;
 }
-#header li a {
+#header .desktop li a {
     display: block;
     color: #666;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-#header li a:hover:not(.active) {
+#header .desktop li a:hover:not(.active) {
     background-color: #ddd;
 }
-#header li a.active {
+#header .desktop li a.active {
     color: white;
     background-color: #4CAF50;
 }
 
+#header .mobile{
+    color: #666;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 2em;
+    text-align: center;
+}
+#header .mobile #drpbtn{
+    position: absolute;
+    text-align: left;
+    padding-left: 10px;
+    height: 2em;
+    line-height: 2em;
+}
+#header .mobile #help{
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 2em;
+    line-height: 2em;
+    text-align: right;
+    padding-right: 10px;
+    padding-left: 10px;
+    color: inherit;
+    text-decoration: none;
+}
+#header .mobile #menu ul {
+    position: fixed;
+    list-style-type: none;
+    top: 2em;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: #f1f1f1;
+    text-align: center;
+    display: block;
+    height: 0%;
+    overflow: hidden;
+    box-shadow: none;
+    transition: height 2s, box-shadow 2s;
+}
+#header .mobile #menu ul.open{
+    display: block;
+    box-shadow: 0px 4px 10px #cccccc;
+    height: 40%;
+    z-index: 100;
+}
+#header .mobile #menu li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+#header .mobile #menu li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+#headerspacer.desktop{
+    display: block;
+    z-index: 0;
+    height: 3em;
+}
+#headerspacer.mobile{
+    display: none;
+    z-index: 0;
+    height: 2em;
+}
+
 /*Jumbotron*/
 #jumbotron{
+    display: block;
     color: aliceblue;
-    z-index: 0;
     position: relative;
     background-image: url(/res/media/images/backimage.png);
     background-image: linear-gradient(rgba(255,255,255,0), rgba(0,0,0,.8)), url(/res/media/images/backimage.png);
@@ -56,12 +128,13 @@ h1, h2, h3, h4, h5{
     background-size: 100%, 100%;
     background-position: center; 
     height: 30%;
+    text-align: center;
 }
 #jumbotron h1.title{
     font-size: 3em;
     color: aliceblue;
     text-align: center;
-    padding: 100%:
+    padding: .5em;;
 }
 #jumbotron .contain{
     position: absolute;
@@ -70,17 +143,17 @@ h1, h2, h3, h4, h5{
     transform: translate(-50%, -50%);
 }
 #jumbotron a{
-    font-size: 1.2em;
-    text-decoration: none;
     color: inherit;
-    border: solid aliceblue 2px;
+    border: solid azure 2px;
+    border-radius: 2px;
     padding: 5px;
-    border-radius: 3px;
-    transition: background-color .5s, color .5s;
+    text-decoration: none;
+    transition: color .7s, background-color .7s;
+    text-align: center;
 }
 #jumbotron a:hover, a:focus{
-    background-color: aliceblue;
-    color: black; 
+    color: black;
+    background-color: azure;
 }
 
 #feed{
@@ -88,28 +161,40 @@ h1, h2, h3, h4, h5{
 }
 
 /*Mobile Changes*/
-@media (max-width: 426px){
+@media  only screen and (max-width: 426px){
+    #headerspacer.desktop{
+        display: none;
+    }
+    #headerspacer.mobile{
+        display: block;
+    }
+    
+    #jumbotron{
+        z-index: -100000;
+    }
     #jumbotron h1.title{
         font-size: 2.5em;
     }
     #jumbotron a{
         display: none;
     }
+    
+    #header .desktop{
+        display: none;
+    }
+    #header .mobile{
+        display: block;
+    }
 }
 
 /*Tablet Changes*/
-@media (max-width: 768px){
+@media  only screen and (max-width: 768px){
     #jumbotron a{
         display: none;
     }
 }
 
 /*TV Or Large Display*/
-@media (max-width: 2560px){
+@media  only screen and (max-width: 2560px){
     
-}
-
-.jitem{
-    text-align: center;
-    margin-top: 1em;
 }
