more mobile friendly and feed0.0

--- a/res/include/header.html
+++ b/res/include/header.html
@@ -25,3 +25,4 @@
         $("#menu ul").toggleClass("open");
     }
 </script>
+<link rel="stylesheet" type="text/css" href="/res/include/header.css">
