--- a/res/include/header.css
+++ b/res/include/header.css
@@ -63,6 +63,7 @@
     padding-left: 10px;
     color: inherit;
     text-decoration: none;
+    font-size: 1em;
 }
 #header .mobile #menu ul {
     position: fixed;
