--- a/res/include/header.html
+++ b/res/include/header.html
@@ -1,10 +1,10 @@
 <div class="desktop">
     <ul>
-         <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#creations">Creations</a></li>
-        <li><a href="#games">Games</a></li> 
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="/creations.html">Creations</a></li>
+        <li><a href="/games.html">Games</a></li> 
     </ul>
 </div>
 <div class="mobile">
@@ -12,11 +12,11 @@
         <div id="drpbtn" onclick="openMenu()">&#9776;</div>
         <a id="help" href="/contact.html">Help</a>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#creations">Creations</a></li>
-            <li><a href="#games">Games</a></li> 
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/creations.html">Creations</a></li>
+            <li><a href="/games.html">Games</a></li>
         </ul>
     </div>
 </div>
