--- a/res/private/feed.css
+++ b/res/private/feed.css
@@ -2,6 +2,7 @@
     color: black;
     text-align: left;
     margin-top: 10px;
+    margin-bottom: 10px;
     background-color: white;
     margin-left: 10%;
     margin-right: 10%;
