--- a/res/include/header.html
+++ b/res/include/header.html
@@ -5,7 +5,8 @@
         <li><a href="/about.html">About</a></li>
         <li><a href="/contact.html">Contact</a></li>
         <li><a href="/creations.html">Creations</a></li>
-        <li><a href="/games.html">Games</a></li> 
+        <li><a href="/games.html">Games</a></li>
+        <li><a href="/dumps">Data Dumps</a></li> 
     </ul>
 </div>
 <div class="mobile">
@@ -18,6 +19,7 @@
             <li><a href="/contact.html">Contact</a></li>
             <li><a href="/creations.html">Creations</a></li>
             <li><a href="/games.html">Games</a></li>
+            <li><a href="/dumps">Data Dumps</a></li> 
         </ul>
     </div>
 </div>
