--- a/res/private/feed.css
+++ b/res/private/feed.css
@@ -1,11 +1,20 @@
+@keyframes dropHeader {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 80%;
+    }
+}
+
 .feeditem{
     color: black;
     text-align: left;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: white;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 2px;
     padding: 5px;
     box-shadow: 2px 2px 5px #cccccc;
