--- a/res/private/feed.css
+++ b/res/private/feed.css
@@ -8,15 +8,16 @@
 }
 
 .feeditem{
-  animation-name: wide;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-out;
+    animation-name: wide;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-out;
+    animation-duration: 0.6s;
     color: black;
     text-align: left;
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: white;
-    width: 0%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 2px;
