--- a/res/private/feed.css
+++ b/res/private/feed.css
@@ -8,10 +8,10 @@
 }
 
 .feeditem{
-    animation-name: wide;
+    /*animation-name: wide;
     animation-iteration-count: 1;
     animation-timing-function: ease-out;
-    animation-duration: 0.6s;
+    animation-duration: 0.6s;*/
     color: black;
     text-align: left;
     margin-top: 10px;
